k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: teste-app-service-nodeport
spec:
  #type: ClusterIP
  type: NodePort
  #type: LoadBalancer
  selector:
    run: teste-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30300
