k8s/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teste-app-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: testapp.fabrizio.treinamento.tcloud-devops.cloudtotvs.com.br.
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: testapp.fabrizio.treinamento.tcloud-devops.cloudtotvs.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teste-app-service
                port:
                  number: 5000
  tls:
    - hosts:
        - testapp.fabrizio.treinamento.tcloud-devops.cloudtotvs.com.br
      secretName: testapp-secret-prod
