k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teste-app-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: testapp.emerson.nostromo.tcloud-devops.cloudtotvs.com.br.
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: testapp.emerson.nostromo.tcloud-devops.cloudtotvs.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teste-app-service
                port:
                  number: 5000
